# demo-minio

.github/workflows/: docker.yml
minio-api-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
minio-client/: Dockerfile  main.py
